# Flowlog

./: .coverage  .dockerignore  .env.example  .gitignore  DEPLOY.md  DEPLOY_GUIDE.md  Dockerfile  LICENSE  README.md  conftest.py  debug_correios.py  deploy.sh  docker-compose.yml  docker-entrypoint.sh  docker-stack.yml  pyproject.toml  requirements.txt  teste.txt  verify_notifications.py
.github/workflows/: ci.yml
apps/accounts/: admin.py  models.py
apps/api/: __init__.py  mixins.py  permissions.py  urls.py
apps/core/: context.py  managers.py  middleware.py  models.py  querysets.py  tasks.py  tests.py  urls.py  views.py
apps/integrations/: admin.py  models.py  whatsapp_tests.py
apps/orders/: admin.py  customer_urls.py  customer_views.py  forms.py  models.py  services.py  tests.py  tracking_urls.py  tracking_views.py  urls.py  views.py
apps/payments/: admin.py  models.py  services.py  tests.py  urls.py  views.py
apps/tenants/: admin.py  models.py
config/: celery.py  settings.py  urls.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOY.md  DEVELOP.md  DOCUMENTACAO.md  DOCUMENTATION.md  README.md  ROADMAP.md
static/: placeholder.txt
templates/: 404.html
templates/base/: base.html  messages.html  navbar.html
templates/customers/: customer_detail.html  customer_edit.html  customer_list.html
templates/dashboard/: dashboard.html
templates/freight/: calculator.html
templates/orders/: order_label.html  order_label_thermal.html
templates/payments/: create_standalone.html  payment_link_detail.html  payment_link_list.html
templates/profile/: profile.html
templates/reports/: reports.html
templates/settings/: correios.html  integrations.html  mandae.html  motoboy.html  pagarme.html  (+2 more)
(+90 files in other folders)
